major fix on swagger for tickets
